--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,10 @@
 /*Estilos para los titulos*/
 h1{
-    color:#369;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size:250%;
+    text-align: left; 
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
+    font-size: 30px; 
+    color: #2980B9; 
+    font-weight: 100px;
+    width: 300px;
+    height: 50px;
 }
