--- a/src/app/ejercicios/ejercicios.component.html
+++ b/src/app/ejercicios/ejercicios.component.html
@@ -1,1 +1,3 @@
-{{ejercicio}}
+<h2>{{ejercicio.name}}</h2>
+<div><span>id: </span>{{ejercicio.id}}</div>
+<div><span>name: </span>{{ejercicio.name}}</div>
