--- a/src/app/ejercicios/ejercicios.component.html
+++ b/src/app/ejercicios/ejercicios.component.html
@@ -1,3 +1,3 @@
-<h2>{{ejercicio.name}}</h2>
+<h2>{{ejercicio.name | uppercase }}</h2>
 <div><span>id: </span>{{ejercicio.id}}</div>
 <div><span>name: </span>{{ejercicio.name}}</div>
